fix: deploy pipeline

--- a/.github/workflows/sync-to-helios.yml
+++ b/.github/workflows/sync-to-helios.yml
@@ -19,14 +19,17 @@ jobs:
         env:
           HELIOS_SSH_PRIVATE_KEY: ${{ secrets.HELIOS_SSH_PRIVATE_KEY }}
           HELIOS_USER: ${{ secrets.HELIOS_USER }}
+          HELIOS_PORT: ${{ secrets.HELIOS_PORT }}
           HELIOS_HOST: ${{ secrets.HELIOS_HOST }}
           HELIOS_REMOTE_DIR: ${{ secrets.HELIOS_REMOTE_DIR }}
         run: |
           echo "$HELIOS_SSH_PRIVATE_KEY" > key.pem
           chmod 600 key.pem
+          
+          ssh -i key.pem -o StrictHostKeyChecking=no -p $HELIOS_PORT "$HELIOS_USER@$HELIOS_HOST" "rm -rf $HELIOS_REMOTE_DIR/*"
 
           rsync -avz --exclude '.git' --exclude '.github' --exclude '.gitignore' --exclude 'key.pem' --exclude 'README.md' \
-            -e "ssh -i key.pem -o StrictHostKeyChecking=no -p 2222" \
+            -e "ssh -i key.pem -o StrictHostKeyChecking=no -p $HELIOS_PORT" \
             ./ $HELIOS_USER@$HELIOS_HOST:$HELIOS_REMOTE_DIR
 
           rm -f key.pem
