--- a/lab2/Taskfile.yml
+++ b/lab2/Taskfile.yml
@@ -5,11 +5,17 @@ tasks:
     cmds:
       - rm -rf build
       - mkdir -p build
-      - javac -encoding UTF-8 -cp lib/Pokemon.jar src/Main.java src/pokemons/**/*.java src/moves/**/*.java -d build
+      - javac --release 17 -encoding UTF-8 -cp lib/Pokemon.jar -d build src/Main.java src/pokemons/**/*.java src/moves/**/*.java
+    silent: true
+
+  jar:
+    deps: [build]
+    cmds:
+      - jar -c -f build/lab2.jar -e Main -C build .
     silent: true
 
   run:
+    deps: [jar]
     cmds:
-      - java -cp lib/Pokemon.jar:build Main
-    deps: [build]
+      - java -cp lib/Pokemon.jar:build/lab2.jar Main
     silent: true
