--- a/lab5/client/pom.xml
+++ b/lab5/client/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>itmo.cse.lab5</groupId>
 		<artifactId>lab5</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
-	<artifactId>lab-client</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>lab-client</name>
+	<artifactId>client</artifactId>
+	<version>1.0.0</version>
+	<name>client</name>
 
 	<build>
 		<plugins>
@@ -53,7 +53,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>lab-common</artifactId>
+			<artifactId>common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
