--- a/lab5/common/pom.xml
+++ b/lab5/common/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>itmo.cse.lab5</groupId>
 		<artifactId>lab5</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
-	<artifactId>lab-server</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>lab-server</name>
+	<artifactId>common</artifactId>
+	<version>1.0.0</version>
+	<name>common</name>
 
 	<build>
 		<plugins>
@@ -26,12 +26,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<mainClass>${project.groupId}.server.Server</mainClass>
-						</manifest>
-					</archive>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
@@ -49,15 +43,5 @@
 
 		</plugins>
 	</build>
-
-	<dependencies>
-
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>lab-common</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-	</dependencies>
 
 </project>
