--- a/lab5/server/pom.xml
+++ b/lab5/server/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>itmo.cse.lab5</groupId>
 		<artifactId>lab5</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
-	<artifactId>lab-common</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>lab-common</name>
+	<artifactId>server</artifactId>
+	<version>1.0.0</version>
+	<name>server</name>
 
 	<build>
 		<plugins>
@@ -26,6 +26,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>${project.groupId}.server.Server</mainClass>
+						</manifest>
+					</archive>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
@@ -43,5 +49,15 @@
 
 		</plugins>
 	</build>
+
+	<dependencies>
+
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+	</dependencies>
 
 </project>
