refactor(helios-ci):

--- a/.github/workflows/sync-to-helios.yml
+++ b/.github/workflows/sync-to-helios.yml
@@ -26,7 +26,8 @@ jobs:
           echo "$HELIOS_SSH_PRIVATE_KEY" > key.pem
           chmod 600 key.pem
 
-          rsync -avz --delete --exclude '.git' --exclude '.github' --exclude '.gitignore' --exclude 'key.pem' --exclude 'README.md' \
+          rsync -avz --delete --exclude '.git' --exclude '.github' --exclude '.gitmodules' --exclude '.gitignore' \ 
+            --exclude 'key.pem' --exclude 'README.md' \
             -e "ssh -i key.pem -o StrictHostKeyChecking=no -p $HELIOS_PORT" \
             ./ $HELIOS_USER@$HELIOS_HOST:$HELIOS_REMOTE_DIR
 
