--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "s2-labs-archetype"]
-	path = s2-labs-archetype
+[submodule "sem2-labs-archetype"]
+	path = sem2-labs-archetype
 	url = https://github.com/mikhalexandr/programming-archetype.git
