--- a/lab5/server/pom.xml
+++ b/lab5/server/pom.xml
@@ -58,6 +58,12 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
 	</dependencies>
 
 </project>
