feat(lab5): lots of things

--- a/lab5/Taskfile.yml
+++ b/lab5/Taskfile.yml
@@ -20,6 +20,11 @@ tasks:
     cmds:
       - mvn checkstyle:check
 
+  javadoc:
+    desc: Build JavaDoc
+    cmds:
+      - mvn -q -DskipTests javadoc:aggregate
+
   run:server:
     desc: Run server jar
     deps: [build]
