--- a/lab5/Taskfile.yml
+++ b/lab5/Taskfile.yml
@@ -23,7 +23,7 @@ tasks:
   javadoc:
     desc: Build JavaDoc
     cmds:
-      - mvn -q -DskipTests javadoc:aggregate
+      - mvn -DskipTests javadoc:aggregate
 
   run:server:
     desc: Run server jar
